Update lightning components to display latest news

--- a/src/lwc/bookNewsLWC/bookNewsLWC.html
+++ b/src/lwc/bookNewsLWC/bookNewsLWC.html
@@ -1,7 +1,8 @@
 <template>
   <template if:true={bookNews.data}>
-    <lightning-card title={bookNews.data.MBMS_Title__c} icon-name="custom:custom23">
+    <lightning-card title="Latest News" icon-name="custom:custom23">
       <img style="padding: 10px" src={bookNews.data.MBMS_Image_URL__c}/>
+      <p class="slds-p-horizontal_small"><strong>{bookNews.data.MBMS_Title__c}</strong></p>
       <p class="slds-p-horizontal_small">{bookNews.data.MBMS_Content__c}</p>
       <footer class="slds-card__footer">
         <p class="slds-card__footer-action">Tags: {bookNews.data.MBMS_Tags__c}</p>
