--- a/src/lwc/artistNewsLWC/artistNewsLWC.html
+++ b/src/lwc/artistNewsLWC/artistNewsLWC.html
@@ -1,7 +1,8 @@
 <template>
   <template if:true={artistNews.data}>
-    <lightning-card title={artistNews.data.MBMS_Title__c} icon-name="custom:custom23">
+    <lightning-card title="Latest News" icon-name="custom:custom23">
       <img style="padding: 10px" src={artistNews.data.MBMS_Image_URL__c}/>
+      <p class="slds-p-horizontal_small"><strong>{artistNews.data.MBMS_Title__c}</strong></p>
       <p class="slds-p-horizontal_small">{artistNews.data.MBMS_Content__c}</p>
       <footer class="slds-card__footer">
         <p class="slds-card__footer-action">Tags: {artistNews.data.MBMS_Tags__c}</p>
