--- a/src/lwc/movieNewsLWC/movieNewsLWC.html
+++ b/src/lwc/movieNewsLWC/movieNewsLWC.html
@@ -1,7 +1,8 @@
 <template>
   <template if:true={movieNews.data}>
-    <lightning-card title={movieNews.data.MBMS_Title__c} icon-name="custom:custom23">
+    <lightning-card title="Latest News" icon-name="custom:custom23">
       <img style="padding: 10px" src={movieNews.data.MBMS_Image_URL__c}/>
+      <p class="slds-p-horizontal_small"><strong>{movieNews.data.MBMS_Title__c}</strong></p>
       <p class="slds-p-horizontal_small">{movieNews.data.MBMS_Content__c}</p>
       <footer class="slds-card__footer">
         <p class="slds-card__footer-action">Tags: {movieNews.data.MBMS_Tags__c}</p>
